--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -18,8 +18,8 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.example</groupId>
-      <artifactId>application</artifactId>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
     </dependency>
   </dependencies>
 </project>
