--- a/interfaces/pom.xml
+++ b/interfaces/pom.xml
@@ -21,5 +21,9 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.example</groupId>
+      <artifactId>application</artifactId>
+    </dependency>
   </dependencies>
 </project>
