--- a/start/pom.xml
+++ b/start/pom.xml
@@ -3,8 +3,8 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>ddd</artifactId>
     <groupId>org.example</groupId>
+    <artifactId>ddd</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -19,16 +19,17 @@
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-dependencies</artifactId>
-      <version>2.4.0</version>
-      <type>pom</type>
-      <scope>import</scope>
+      <artifactId>spring-boot-starter-web</artifactId>
       <exclusions>
         <exclusion>
-          <groupId>org.springframework.data</groupId>
-          <artifactId>spring-data-redis</artifactId>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-tomcat</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-undertow</artifactId>
     </dependency>
 
     <dependency>
@@ -40,6 +41,11 @@
       <artifactId>mybatis-plus-boot-starter</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.example</groupId>
+      <artifactId>interfaces</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
 
     <dependency>
       <groupId>org.example</groupId>
@@ -51,11 +57,7 @@
       <artifactId>infrastructure</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
-    <dependency>
-      <groupId>org.example</groupId>
-      <artifactId>interfaces</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
+
     <dependency>
       <groupId>org.example</groupId>
       <artifactId>application</artifactId>
