--- a/application/pom.xml
+++ b/application/pom.xml
@@ -19,7 +19,12 @@
   <dependencies>
     <dependency>
       <groupId>org.example</groupId>
-      <artifactId>domain</artifactId>
+      <artifactId>client</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.example</groupId>
+      <artifactId>infrastructure</artifactId>
     </dependency>
   </dependencies>
 
