--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <module>interfaces</module>
     <module>infrastructure</module>
     <module>start</module>
+    <module>client</module>
   </modules>
 
   <properties>
@@ -61,6 +62,11 @@
         <artifactId>application</artifactId>
         <version>1.0-SNAPSHOT</version>
       </dependency>
+      <dependency>
+        <groupId>org.example</groupId>
+        <artifactId>client</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </dependency>
 
       <dependency>
         <groupId>org.springframework.boot</groupId>
@@ -93,6 +99,12 @@
         <artifactId>h2</artifactId>
         <version>1.4.200</version>
         <scope>runtime</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>30.1.1-jre</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
